# python-course-task-2

./: .env  .gitignore  README.md  alembic.ini  config.py  main.py  pyproject.toml
todo_app/: __init__.py  models.py  service.py
todo_app/db/: __init__.py  crud.py  models.py
todo_app/db/migrations/: env.py
todo_app/db/migrations/versions/: 71083c84646a_initial.py
todo_app/handlers/: auth.py  todo.py
todo_app/jobs/: __init__.py
todo_app/middleware/: __init__.py  whitelist_auth.py
